add i18n for broadcast agent

--- a/src/agentscope/studio/static/i18n/i18n_en.json
+++ b/src/agentscope/studio/static/i18n/i18n_en.json
@@ -38,6 +38,11 @@
     "workstation-menu-btn-run": "Run the workflow",
     "workstation-menu-btn-save": "Save workflow",
     "workstation-menu-btn-workflow": "Load workflow",
+    "agent-broadcast-Copy": "Copy",
+    "agent-broadcast-readme": "An agent that only broadcasts its content",
+    "agent-broadcast-labelName": "Name",
+    "agent-broadcast-labelName-Assistant": "Assistant",
+    "agent-broadcast-content": "content",
     "agent-dialogagent-Copy": "Copy",
     "agent-dialogagent-readme": "An dialog agent that can interact with users or other agents.",
     "agent-dialogagent-labelName": "Name",
