--- a/src/agentscope/studio/static/i18n/i18n_zh.json
+++ b/src/agentscope/studio/static/i18n/i18n_zh.json
@@ -38,6 +38,11 @@
     "workstation-menu-btn-run": "运行工作流",
     "workstation-menu-btn-save": "保存工作流",
     "workstation-menu-btn-workflow": "加载工作流",
+    "agent-broadcast-Copy": "复制",
+    "agent-broadcast-readme": "只会广播其内容框中文本的智能体",
+    "agent-broadcast-labelName": "名称",
+    "agent-broadcast-labelName-Assistant": "助理",
+    "agent-broadcast-content": "内容",
     "agent-dialogagent-Copy": "复制",
     "agent-dialogagent-readme": "可与用户或其他智能体互动的对话智能体。",
     "agent-dialogagent-labelName": "名称",
