--- a/src/agentscope/studio/static/i18n/i18n_zh.json
+++ b/src/agentscope/studio/static/i18n/i18n_zh.json
@@ -198,7 +198,7 @@
     "service-text-to-image-numberofImages": "图片数量",
     "service-text-to-image-size": "图片尺寸",
     "service-text-to-image-readme": "将文本转图像服务集成到 ReActAgent 中以增强智能体功能",
-    "tool-image-composition-readme": "图像合成配置",
+    "tool-image-composition-readme": "将多张图片合成一张",
     "tool-image-composition-Titles": "标题",
     "tool-image-composition-Outputpath": "输出路径",
     "tool-image-composition-row": "行",
@@ -206,15 +206,15 @@
     "tool-image-composition-Spacing": "间距",
     "tool-image-composition-titleHeight": "标题高度",
     "tool-image-composition-fontName": "字体名称",
-    "tool-image-motion-readme": "图像运动配置",
+    "tool-image-motion-readme": "将图片转化为mp4或者gif格式",
     "tool-image-motion-outputPath": "输出路径",
     "tool-image-motion-outputFormat": "输出格式",
     "tool-image-motion-labelDuration": "持续时间",
     "tool-image-motion-labelMotiondirection": "运动方向",
-    "tool-post-readme": "Post 配置",
+    "tool-post-readme": "提交Post请求并返回结果",
     "tool-post-label-outputPath": "输出路径",
     "tool-post-label-outputtype": "输出类型",
-    "tool-video-composition-readme": "视频合成配置",
+    "tool-video-composition-readme": "将多个视频合成一个",
     "tool-video-composition-outputPath": "输出路径",
     "tool-video-composition-targetVideoWidth": "目标视频宽度",
     "tool-video-composition-targetVideoHeight": "目标视频高度",
