--- a/src/agentscope/studio/static/i18n/i18n_en.json
+++ b/src/agentscope/studio/static/i18n/i18n_en.json
@@ -198,7 +198,7 @@
     "service-text-to-image-modelName": "Model Name",
     "service-text-to-image-numberofImages": "Number of Images",
     "service-text-to-image-size": "size",
-    "tool-image-composition-readme": "Image composition Configurations",
+    "tool-image-composition-readme": "Composite images into one image",
     "tool-image-composition-Titles": "Titles",
     "tool-image-composition-Outputpath": "Output path",
     "tool-image-composition-row": "Row",
@@ -206,15 +206,15 @@
     "tool-image-composition-Spacing": "Spacing",
     "tool-image-composition-titleHeight": "Title height",
     "tool-image-composition-fontName": "Font name",
-    "tool-image-motion-readme": "Image Motion Configurations",
+    "tool-image-motion-readme": "Convert an image to an mp4 or a gif",
     "tool-image-motion-outputPath": "Output path",
     "tool-image-motion-outputFormat": "Output Format",
     "tool-image-motion-labelDuration": "Duration",
     "tool-image-motion-labelMotiondirection": "Motion direction",
-    "tool-post-readme": "Post Configurations",
+    "tool-post-readme": "Post a request and return the response",
     "tool-post-label-outputPath": "Output path",
     "tool-post-label-outputtype": "Output type",
-    "tool-video-composition-readme": "Video composition Configurations",
+    "tool-video-composition-readme": "Composite videos into one video",
     "tool-video-composition-outputPath": "Output path",
     "tool-video-composition-targetVideoWidth": "Target Video Width",
     "tool-video-composition-targetVideoHeight": "Target Video Height",
