--- a/src/agentscope/studio/static/i18n/i18n_en.json
+++ b/src/agentscope/studio/static/i18n/i18n_en.json
@@ -214,6 +214,11 @@
     "tool-video-composition-targetVideoWidth": "Target Video Width",
     "tool-video-composition-targetVideoHeight": "Target Video Height",
     "tool-video-composition-targetVideoFps": "Target Video Fps",
+    "tool-code-readme": "Execute Python Code",
+    "tool-code-note": "Note:",
+    "tool-code-note-var": "- Input and Output variables must be a Msg or dict object.",
+    "tool-code-note-func": "- Please do not modify the function name.",
+    "tool-code-content": "Code",
     "workstarionjs-import-prev": "Previous",
     "workstarionjs-import-next": "Next",
     "workstarionjs-import-skip": "Skip",
