modify according to comments

--- a/src/agentscope/studio/static/i18n/i18n_en.json
+++ b/src/agentscope/studio/static/i18n/i18n_en.json
@@ -206,7 +206,7 @@
     "tool-image-composition-Spacing": "Spacing",
     "tool-image-composition-titleHeight": "Title height",
     "tool-image-composition-fontName": "Font name",
-    "tool-image-motion-readme": "Convert an image to an mp4 or a gif",
+    "tool-image-motion-readme": "Convert an image to an mp4 or a gif by shifting the perspective",
     "tool-image-motion-outputPath": "Output path",
     "tool-image-motion-outputFormat": "Output Format",
     "tool-image-motion-labelDuration": "Duration",
