add image synthesis as a tool

--- a/src/agentscope/studio/static/i18n/i18n_en.json
+++ b/src/agentscope/studio/static/i18n/i18n_en.json
@@ -200,6 +200,11 @@
     "service-text-to-image-modelName": "Model Name",
     "service-text-to-image-numberofImages": "Number of Images",
     "service-text-to-image-size": "size",
+    "tool-image-synthesis-readme": "Integrate the Text to Image",
+    "tool-image_synthesis-modelName": "Model Name",
+    "tool-image_synthesis-numberofImages": "Number of Images",
+    "tool-image_synthesis-size": "size",
+    "tool-image_synthesis-saveDir": "Save dir",
     "tool-image-composition-readme": "Composite images into one image",
     "tool-image-composition-Titles": "Titles",
     "tool-image-composition-Outputpath": "Output path",
