--- a/src/agentscope/studio/static/i18n/i18n_zh.json
+++ b/src/agentscope/studio/static/i18n/i18n_zh.json
@@ -200,6 +200,11 @@
     "service-text-to-image-numberofImages": "图片数量",
     "service-text-to-image-size": "图片尺寸",
     "service-text-to-image-readme": "将文本转图像服务集成到 ReActAgent 中以增强智能体功能",
+    "tool-image-synthesis-readme": "文本生成图片",
+    "tool-image_synthesis-modelName": "模型名称",
+    "tool-image_synthesis-numberofImages": "图片数量",
+    "tool-image_synthesis-size": "图片尺寸",
+    "tool-image_synthesis-saveDir": "保存目录",
     "tool-image-composition-readme": "将多张图片合成一张",
     "tool-image-composition-Titles": "标题",
     "tool-image-composition-Outputpath": "输出路径",
